# lol-champ-picker

./: README.md  champions-dict.json  champions.json  json-nicer.json  lanes.json  main.py  non_gui_picker.py  picker.py  pyproject.toml  roles.json  update_info.py  view.qml
flaskr/: __init__.py  db.py  schema.sql
old/: champions-dict.json  champions.json  roles.json
